# stm-notify

./: README.md  stm-notify.cabal
examples/: Example.hs
src/Control/Concurrent/STM/: Message.hs  Notify.hs
test/Control/Concurrent/STM/: NotifySpec.hs
