Name:                   stm-notify
Version:                0.3.0
Maintainer:             Kevin Cotrone <kevincotrone@gmail.com>
License:                BSD3
License-File:           LICENSE
-- Synopsis:               
-- Description:            
Cabal-Version:          >= 1.10
Build-Type:             Simple

flag build-examples
  description: build the example programs
  default: False
  manual: True

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Control.Concurrent.STM.Notify
  Other-Modules:        Control.Concurrent.STM.Notify.Internal
  Build-Depends:        base >= 4 && < 5
                      , stm
                      , async
                      , containers

Test-Suite spec
  Type:                 exitcode-stdio-1.0
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       src
                      , test
  Ghc-Options:          -Wall
  Main-Is:              Spec.hs
  Build-Depends:        base
                      , hspec
                      , stm
                      , async

executable example
  if !flag(build-examples)
      buildable: False
  Main-Is:           Example.hs
  Default-Language:  Haskell2010
  hs-source-dirs:    examples
  Build-Depends:     base        >= 4 && < 5
                   , stm-notify
                   , stm
                   , async
                   , containers
  ghcjs-Options: -Wall


Source-Repository head
  Type:                 git
--  Location:             
